Fixing the .container class to have width only on desktop resolution - it was creating horizontal scroll on mobile

--- a/style.css
+++ b/style.css
@@ -5,10 +5,15 @@ html, body, ul, h1, h2, h3, h4, h5, h6 {
 .navbar {
 	background-color: #333;
 }
-.container {
-	width: 980px;
-	margin: 0 auto;
+
+@media only screen and (min-width: 1020px) {
+	.container {
+		width: 980px;
+		margin: 0 auto;
+	}
 }
+
+
 .nav-list {
 	padding: 15px 0 15px;
 }
